Major clean-up of kalypsobase plug-ins.